[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Area/Main.png" type="Texture" id=1]
[ext_resource path="res://MainMenu2.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
margin_right = 360.0
margin_bottom = 599.0
script = ExtResource( 2 )

[node name="Main" type="Sprite" parent="."]
position = Vector2( 179, 301 )
scale = Vector2( 2.01111, 1.99333 )
z_index = -3
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 209.0
margin_top = 505.0
margin_right = 341.0
margin_bottom = 580.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 132.0
margin_bottom = 20.0
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 132.0
margin_bottom = 44.0
text = "SETTINGS"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 132.0
margin_bottom = 68.0
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
